[package]
authors = ["Alex Ryapolov <ryapolov@pm.me>"]
edition = "2018"
name = "journal"
version = "0.1.1"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
clap = "3.0.0-beta.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempfile = "3.1.0"
thiserror = "1.0"
anyhow = "1.0.35"
directories = "3.0.1"
