[package]
authors = ["Alex Ryapolov <ryapolov@pm.me>"]
edition = "2018"
name = "journal"
version = "0.3.0"

[[bin]]
name = "journal"
path = "src/bin/cli/main.rs"

[dependencies]
anyhow = "1.0.35"
chrono = {version = "0.4", features = ["serde"]}
clap = { version = "3.1.6", features = ["derive"] }
directories = "3.0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempfile = "3.1.0"
thiserror = "1.0"
